--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text"
-   />
-
+    <VideoView
+        android:layout_marginTop="100dp"
+        android:id="@+id/playVideoInThis"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+/>
 </RelativeLayout>
